--- a/android-text-chat/text-chat-acc-pack/src/main/res/layout/main_layout.xml
+++ b/android-text-chat/text-chat-acc-pack/src/main/res/layout/main_layout.xml
@@ -7,7 +7,7 @@
 
     <RelativeLayout
         android:id="@+id/action_bar"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="@dimen/title_bar_height"
         android:background="@color/primary_dark">
 
