--- a/iOS/ScreenShareSample/ScreenShareSample/Base.lproj/Main.storyboard
+++ b/iOS/ScreenShareSample/ScreenShareSample/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Bg1-GZ-zKd">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -24,46 +24,17 @@
                                     <action selector="changeScrollable:" destination="BYZ-38-t0r" eventType="touchUpInside" id="O2C-R8-xbh"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Ke-AN-pdp" customClass="ScreenShareView">
-                                <rect key="frame" x="0.0" y="38" width="600" height="562"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="3Ke-AN-pdp" secondAttribute="trailing" id="32H-o8-B70"/>
-                            <constraint firstItem="3Ke-AN-pdp" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="FRU-Nt-O0m"/>
                             <constraint firstItem="MkI-wv-5LV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="HR5-9a-P1b"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="3Ke-AN-pdp" secondAttribute="bottom" id="ZGC-1T-WyE"/>
-                            <constraint firstItem="3Ke-AN-pdp" firstAttribute="top" secondItem="MkI-wv-5LV" secondAttribute="bottom" id="hBv-9m-MTp"/>
                             <constraint firstItem="MkI-wv-5LV" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="8" id="pvd-pp-Zb1"/>
                         </constraints>
                     </view>
-                    <connections>
-                        <outlet property="shareView" destination="3Ke-AN-pdp" id="9EH-hJ-2yN"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="31" y="357"/>
-        </scene>
-        <!--Screen Share Toolbar View Controller-->
-        <scene sceneID="edm-d0-GaT">
-            <objects>
-                <viewController id="Bg1-GZ-zKd" customClass="ScreenShareToolbarViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Kmn-NL-X8f"/>
-                        <viewControllerLayoutGuide type="bottom" id="GtM-um-zmY"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="z2t-Or-FIh">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="UMY-Kz-eVN" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1369" y="357"/>
+            <point key="canvasLocation" x="547" y="349"/>
         </scene>
     </scenes>
 </document>
