--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -60,7 +60,7 @@ button {
     background-image: url("../images/main/mask.png")
 }
 
-.sharing-poster {
+.sharing-mask {
     position: absolute;
     top: 0;
     width: 100%;
