--- a/iOS/ScreenShareSample/ScreenShareSample/Base.lproj/Main.storyboard
+++ b/iOS/ScreenShareSample/ScreenShareSample/Base.lproj/Main.storyboard
@@ -18,26 +18,35 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MkI-wv-5LV">
-                                <rect key="frame" x="238" y="8" width="125" height="30"/>
+                                <rect key="frame" x="238" y="28" width="125" height="30"/>
                                 <state key="normal" title="Change Scrollable"/>
                                 <connections>
                                     <action selector="changeScrollable:" destination="BYZ-38-t0r" eventType="touchUpInside" id="O2C-R8-xbh"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kZA-bn-U6F">
-                                <rect key="frame" x="280.5" y="46" width="39" height="30"/>
+                                <rect key="frame" x="179" y="28" width="39" height="30"/>
                                 <state key="normal" title="Erase"/>
                                 <connections>
-                                    <action selector="eraseButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FNr-4B-NrC"/>
+                                    <action selector="eraseButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4nO-NJ-Idn"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aUG-iN-5f5">
+                                <rect key="frame" x="383" y="28" width="40" height="30"/>
+                                <state key="normal" title="Share"/>
+                                <connections>
+                                    <action selector="shareButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fyV-qr-akE"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="kZA-bn-U6F" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8o9-8A-CZe"/>
-                            <constraint firstItem="MkI-wv-5LV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="HR5-9a-P1b"/>
-                            <constraint firstItem="kZA-bn-U6F" firstAttribute="top" secondItem="MkI-wv-5LV" secondAttribute="bottom" constant="8" id="j4h-Kn-UKo"/>
-                            <constraint firstItem="MkI-wv-5LV" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="8" id="pvd-pp-Zb1"/>
+                            <constraint firstItem="aUG-iN-5f5" firstAttribute="centerY" secondItem="MkI-wv-5LV" secondAttribute="centerY" id="2dW-Jp-DOw"/>
+                            <constraint firstItem="MkI-wv-5LV" firstAttribute="leading" secondItem="kZA-bn-U6F" secondAttribute="trailing" constant="20" id="8sC-su-GDz"/>
+                            <constraint firstItem="MkI-wv-5LV" firstAttribute="centerY" secondItem="kZA-bn-U6F" secondAttribute="centerY" id="I2v-Un-MCe"/>
+                            <constraint firstItem="MkI-wv-5LV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="dxj-du-kDV"/>
+                            <constraint firstItem="MkI-wv-5LV" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="jdc-fE-EVg"/>
+                            <constraint firstItem="aUG-iN-5f5" firstAttribute="leading" secondItem="MkI-wv-5LV" secondAttribute="trailing" constant="20" id="kLW-Lj-MXt"/>
                         </constraints>
                     </view>
                 </viewController>
