add rotation and zooming feature to the text annotation

--- a/iOS/ScreenShareSample/ScreenShareKit/SaveAndShare/ShareViewController.xib
+++ b/iOS/ScreenShareSample/ScreenShareKit/SaveAndShare/ShareViewController.xib
@@ -27,7 +27,7 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Ny-9k-kel">
                             <rect key="frame" x="24" y="24" width="520" height="520"/>
                             <subviews>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="t7S-ej-ybZ">
+                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="t7S-ej-ybZ">
                                     <rect key="frame" x="0.0" y="0.0" width="520" height="338"/>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20MB" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xJl-c5-skg">
