--- a/android/android-screensharing-annotations/screensharing-acc-pack/src/main/res/values/attrs.xml
+++ b/android/android-screensharing-annotations/screensharing-acc-pack/src/main/res/values/attrs.xml
@@ -3,4 +3,7 @@
     <declare-styleable name="AnnotationToolbar">
         <attr name="tint_color" format="color"/>
     </declare-styleable>
+    <declare-styleable name="AnnotationsToolbar">
+        <attr name="tint_color2" format="color"/>
+    </declare-styleable>
 </resources>
