Adding annotations toolbar and annotationsView

--- a/android/android-screensharing-annotations/annotations-acc-pack/src/main/res/layout/annotations_toolbar.xml
+++ b/android/android-screensharing-annotations/annotations-acc-pack/src/main/res/layout/annotations_toolbar.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="50dp"
     android:background="@color/toolbar_bckg">
@@ -10,5 +10,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/ic_freehand" />
+
+    <TextView
+        android:id="@+id/done"
+        android:layout_width="70dp"
+        android:layout_height="match_parent"
+        android:text="done"
+        android:background="#c2c3"
+        android:clickable="true"/>
 
 </LinearLayout>
