--- a/android-text-chat/text-chat-acc-pack/src/main/res/values/dimens.xml
+++ b/android-text-chat/text-chat-acc-pack/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="text_size">16sp</dimen>
     <dimen name="info_text">14sp</dimen>
     <dimen name="alert_height">55dp</dimen>
+    <dimen name="edit_text_width">220px</dimen>
 </resources>
