add font change to edit text view

--- a/iOS/ScreenShareSample/ScreenShareKit/ScreenShare/ScreenShareEditTextViewController.xib
+++ b/iOS/ScreenShareSample/ScreenShareKit/ScreenShare/ScreenShareEditTextViewController.xib
@@ -8,6 +8,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ScreenShareEditTextViewController">
             <connections>
+                <outlet property="changeFontButton" destination="qXU-n4-i6k" id="ORv-zk-LuL"/>
+                <outlet property="doneButton" destination="u3F-6T-qET" id="wuB-u6-NuQ"/>
                 <outlet property="toolbarBottomLayoutConstraint" destination="2Y6-az-ATM" id="Cv1-BX-52e"/>
                 <outlet property="view" destination="iN0-l3-epB" id="hlG-CC-wkr"/>
             </connections>
@@ -17,11 +19,11 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8kT-ch-D2J">
+                <view alpha="0.69999999999999996" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8kT-ch-D2J">
                     <rect key="frame" x="0.0" y="564" width="600" height="36"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u3F-6T-qET">
-                            <rect key="frame" x="300" y="0.0" width="300" height="36"/>
+                            <rect key="frame" x="474" y="6" width="120" height="24"/>
                             <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                             <state key="normal" title="Done">
@@ -31,29 +33,41 @@
                                 <action selector="doneButtonPressed:" destination="-1" eventType="touchUpInside" id="Iao-hm-ngT"/>
                             </connections>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SQL-ok-7fC">
-                            <rect key="frame" x="0.0" y="0.0" width="300" height="36"/>
-                            <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                            <state key="normal" title="Cancel">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qXU-n4-i6k">
+                            <rect key="frame" x="6" y="6" width="462" height="24"/>
+                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                            <state key="normal" title="Tap to change font: 32pt">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                             <connections>
-                                <action selector="removeButtonPressed:" destination="-1" eventType="touchUpInside" id="hAH-ed-KRX"/>
+                                <action selector="changeFontButtonPressed:" destination="-1" eventType="touchUpInside" id="GcJ-FZ-a7E"/>
                             </connections>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="bottom" secondItem="SQL-ok-7fC" secondAttribute="bottom" id="J1o-By-eEE"/>
-                        <constraint firstItem="u3F-6T-qET" firstAttribute="top" secondItem="8kT-ch-D2J" secondAttribute="top" id="SG5-M2-TSO"/>
-                        <constraint firstItem="u3F-6T-qET" firstAttribute="width" secondItem="8kT-ch-D2J" secondAttribute="width" multiplier="0.5" id="SUL-0J-81G"/>
-                        <constraint firstItem="SQL-ok-7fC" firstAttribute="top" secondItem="8kT-ch-D2J" secondAttribute="top" id="jpO-fG-7df"/>
-                        <constraint firstAttribute="bottom" secondItem="u3F-6T-qET" secondAttribute="bottom" id="kK4-7Q-Bs1"/>
-                        <constraint firstAttribute="trailing" secondItem="u3F-6T-qET" secondAttribute="trailing" id="mqt-P0-NHa"/>
-                        <constraint firstItem="SQL-ok-7fC" firstAttribute="leading" secondItem="8kT-ch-D2J" secondAttribute="leading" id="tqh-69-Gy9"/>
-                        <constraint firstItem="u3F-6T-qET" firstAttribute="leading" secondItem="SQL-ok-7fC" secondAttribute="trailing" id="uT9-gm-ce3"/>
+                        <constraint firstItem="u3F-6T-qET" firstAttribute="top" secondItem="8kT-ch-D2J" secondAttribute="top" constant="6" id="4P2-6c-5qc"/>
+                        <constraint firstItem="u3F-6T-qET" firstAttribute="width" secondItem="8kT-ch-D2J" secondAttribute="width" multiplier="0.2" id="CiX-CP-SnC"/>
+                        <constraint firstAttribute="bottom" secondItem="u3F-6T-qET" secondAttribute="bottom" constant="6" id="GAe-yt-L3S"/>
+                        <constraint firstItem="qXU-n4-i6k" firstAttribute="leading" secondItem="8kT-ch-D2J" secondAttribute="leading" constant="6" id="Qsx-VA-opN"/>
+                        <constraint firstAttribute="trailing" secondItem="u3F-6T-qET" secondAttribute="trailing" constant="6" id="awr-Jm-cHK"/>
+                        <constraint firstAttribute="bottom" secondItem="qXU-n4-i6k" secondAttribute="bottom" constant="6" id="fTE-fs-lnk"/>
+                        <constraint firstItem="u3F-6T-qET" firstAttribute="leading" secondItem="qXU-n4-i6k" secondAttribute="trailing" constant="6" id="hG2-BW-cox"/>
+                        <constraint firstItem="qXU-n4-i6k" firstAttribute="top" secondItem="8kT-ch-D2J" secondAttribute="top" constant="6" id="ucm-y0-fvh"/>
                     </constraints>
                 </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RFD-P5-hZZ">
+                    <rect key="frame" x="8" y="8" width="42" height="27"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
+                    <state key="normal" title="Cancel">
+                        <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </state>
+                    <connections>
+                        <action selector="removeButtonPressed:" destination="-1" eventType="touchUpInside" id="Ttl-qE-uUZ"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <gestureRecognizers/>
@@ -62,6 +76,8 @@
                 <constraint firstAttribute="trailing" secondItem="8kT-ch-D2J" secondAttribute="trailing" id="323-HL-xUM"/>
                 <constraint firstItem="8kT-ch-D2J" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.06" id="FKX-k5-9wn"/>
                 <constraint firstItem="8kT-ch-D2J" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Idi-9z-B2Z"/>
+                <constraint firstItem="RFD-P5-hZZ" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="ggw-rd-gMj"/>
+                <constraint firstItem="RFD-P5-hZZ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="h3m-ac-59A"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
         </view>
