--- a/android/android-screensharing-annotations/annotations-acc-pack/src/main/res/layout/annotations_toolbar.xml
+++ b/android/android-screensharing-annotations/annotations-acc-pack/src/main/res/layout/annotations_toolbar.xml
@@ -127,15 +127,6 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/toolbar_bckg">
-        <TextView
-            android:id="@+id/done"
-            android:layout_width="50dp"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:textAlignment="center"
-            android:text="@string/done_btn"
-            android:background="@color/done_btn"
-            android:clickable="true" />
 
         <ImageButton
             android:id="@+id/draw_freehand"
@@ -163,6 +154,14 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:src="@drawable/ic_type_tool"
+            android:background="@null"/>
+
+        <ImageButton
+            android:id="@+id/screenshot"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/ic_screenshot"
             android:background="@null"/>
 
         <ImageButton
