--- a/android/android-screensharing-annotations/annotations-acc-pack/src/main/res/values/colors.xml
+++ b/android/android-screensharing-annotations/annotations-acc-pack/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="toolbar_bckg">#666666</color>
     <color name="done_btn">#62ADBF</color>
-    <color name="selected">#323232</color>
+    <color name="selected">#3E3E3E</color>
     <color name="picker_color_blue">#2196F3</color>
     <color name="picker_color_purple">#9C27B0</color>
     <color name="picker_color_red">#F44336</color>
